--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src//assets//image.png" />
+    <link rel="icon" type="image/svg+xml" href="/vsdlogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Varahi Self Drive Cars</title>
+    <title>VSD Cars</title>
   </head>
   <body>
     <div id="root"></div>
